--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "e-shop",
   "version": "1.0.0",
   "private": true,
- "scripts": {
-  "start": "node ./bin/www",
-  "dev": "nodemon ./bin/www"
-},
+"scripts": {
+    "start": "nodemon ./bin/www"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
