--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "start": "pm2 start ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -25,8 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "pdf-creator-node": "^2.3.5",
     "pdfkit": "^0.14.0",
+    "puppeteer": "^21.7.0",
     "razorpay": "^2.9.2",
     "sharp": "^0.33.0",
     "superagent": "^8.1.2",
