--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./bin/www",
-    "start": "pm2 start ./bin/www"
+    "dev": "nodemon app",
+    "start": "node app"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
