--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 MONGODB_URL='mongodb://127.0.0.1:27017/eshop'
-MONGODB_ATLAS_URL='mongodb+srv://Sam12:sam12@cluster0.mecdrgk.mongodb.net/shoppingcart?retryWrites=true&w=majority'
+MONGODB_ATLAS_URL='mongodb+srv://myname:myname12@cluster0.5dsppgy.mongodb.net/myshop?retryWrites=true&w=majority'
 RAZ_SECRET_KEY='JtLOVeoWnY6ovGoCiMkuhiRS'
 
 
