--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/node_modules/
-/.env
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
+# Build directories
+build/
+dist/
+
+# Logs
+*.log
